tests/fail/parse-error-007.virtue
struct
    a int

# error: parse error
#  --> test.virtue:1:7
#    |
#  1 | struct
#    |       ^ expected identifier
#
